--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,43 +1,52 @@
-# Neovim as default editor
+# neovim as default editor
 editor /opt/homebrew/bin/nvim
 
-# Cyberdream color theme
+# background opacity and blur
+background_opacity 0.95
+background_blur 16
+
+# cyberdream color theme
 include themes/cyberdream.conf
 
-# macOS title bar color to match cyberdream theme
-macos_titlebar_color #16181A
+# hide macos window title bar
+hide_window_decorations titlebar-only
 
-# Active window border color to match cyberdream theme
+# active window border color to match cyberdream theme
 active_border_color #5ef1ff
 
-# Window margins
+# window margins
 window_margin_width 2 0 2 2
 
-# Window layout
+# window layout
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
 
-# Font settings
+# font settings
 font_family MonoLisa
 bold_font MonoLisa Bold
+italic_font none
 font_size 14
 disable_ligatures never
 
-# macOS specific settings
+# macos specific settings
 macos_option_as_alt yes
 macos_colorspace displayp3
 macos_show_window_title_in_menubar no
 macos_quit_when_last_window_closed yes
 
-# Always start kitty in full screen
+# always start kitty in full screen
 remember_window_size no
 remember_window_position no
 initial_window_width 1000c
 initial_window_height 1000c
 
-# Cursor animation
+# do not override tab names
+allow_remote_control yes
+shell_integration no-title
+
+# cursor animation
 cursor_trail 3
 
-# Key mappings
+# key mappings
 map cmd+t launch --cwd=current --type=tab
 map cmd+n launch --cwd=current --type=os-window
 map cmd+enter launch --cwd=current --type=window
@@ -45,6 +54,9 @@ map cmd+w close_window
 
 map ctrl+opt+right next_window
 map ctrl+opt+left previous_window
+
+map ctrl+shift+left move_tab_backward
+map ctrl+shift+right move_tab_forward
 
 map ctrl+cmd+up move_window up
 map ctrl+cmd+down move_window down
