--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,31 +1,36 @@
+# font settings
+font_family MonoLisa Nerd Font Mono
+bold_font auto
+italic_font none
+bold_italic_font none
+font_size 14
+disable_ligatures never
+
 # neovim as default editor
 editor /opt/homebrew/bin/nvim
 
+# tab settings
+tab_bar_edge top
+tab_bar_align center
+
 # background opacity and blur
-background_opacity 0.95
+background_opacity 0.80
 background_blur 16
 
-# cyberdream color theme
-include themes/cyberdream.conf
+# shell integration
+shell_integration enabled
 
-# hide macos window title bar
-hide_window_decorations titlebar-only
+# macos title bar color to match cyberdream theme
+macos_titlebar_color background
 
 # active window border color to match cyberdream theme
 active_border_color #5ef1ff
 
 # window margins
-window_margin_width 2 0 2 2
+window_margin_width 2 0 0 2
 
 # window layout
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
-
-# font settings
-font_family MonoLisa
-bold_font MonoLisa Bold
-italic_font none
-font_size 14
-disable_ligatures never
 
 # macos specific settings
 macos_option_as_alt yes
@@ -72,6 +77,13 @@ map cmd+ctrl+r resize_window reset
 
 map cmd+opt+n detach_window new-tab
 map cmd+opt+p detach_window tab-left
+
+map cmd+ctrl+l no_op
+
+# BEGIN_KITTY_THEME
+# Cyberdream
+include current-theme.conf
+# END_KITTY_THEME
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
@@ -121,6 +133,7 @@ map cmd+opt+p detach_window tab-left
 
 #: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
+#: Map the specified Unicode codepoints to a particular font. Useful
 #: Map the specified Unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
 #: Powerline. Avoids the need for patched fonts. Each Unicode code
@@ -2833,7 +2846,6 @@ map cmd+opt+p detach_window tab-left
 #::  Some more examples::
 
 #::      # Output a word and move the cursor to the start of the line (like typing and pressing Home)
-#::      map ctrl+alt+a send_text normal Word\e[H
 #::      map ctrl+alt+a send_text application Word\eOH
 #::      # Run a command at a shell prompt (like typing the command and pressing Enter)
 #::      map ctrl+alt+a send_text normal,application some command with arguments\r
