--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,4 +1,4 @@
-# cyberdream theme for kitty
+# Cyberdream theme for kitty
 background            #16181a
 foreground            #ffffff
 cursor                #ffffff
