--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -51,32 +51,32 @@ shell_integration no-title
 # cursor animation
 cursor_trail 3
 
-# key mappings
+# Key mappings
 map cmd+t launch --cwd=current --type=tab
 map cmd+n launch --cwd=current --type=os-window
 map cmd+enter launch --cwd=current --type=window
-map cmd+w close_window
+map cmd+w kitten kitty_nvim_close.py
 
-map ctrl+opt+right next_window
-map ctrl+opt+left previous_window
+map ctrl+cmd+right next_window
+map ctrl+cmd+left previous_window
 
-map ctrl+shift+left move_tab_backward
-map ctrl+shift+right move_tab_forward
+map ctrl+opt+up move_window up
+map ctrl+opt+down move_window down
+map ctrl+opt+left move_window left
+map ctrl+opt+right move_window right
 
-map ctrl+cmd+up move_window up
-map ctrl+cmd+down move_window down
-map ctrl+cmd+left move_window left
-map ctrl+cmd+right move_window right
-
-map cmd+opt+right next_tab
-map cmd+opt+left previous_tab
-
-map cmd+ctrl+w resize_window wider 5
-map cmd+ctrl+n resize_window narrower 5
+map cmd+ctrl++ resize_window wider 5
+map cmd+ctrl+- resize_window narrower 5
 map cmd+ctrl+r resize_window reset
 
 map cmd+opt+n detach_window new-tab
 map cmd+opt+p detach_window tab-left
+
+map cmd+opt+right next_tab
+map cmd+opt+left previous_tab
+
+map cmd+shift+left move_tab_backward
+map cmd+shift+right move_tab_forward
 
 map cmd+ctrl+l no_op
 
